--- a/css/style.css
+++ b/css/style.css
@@ -30,23 +30,10 @@ body {
   padding: 0;
   font-family: "Cuprum";
   font-size: 18px;
+  font-style: normal;
+  font-weight: normal;
   line-height: 24px;
-  font-weight: 400;
   color: var(--basic-black);
-  background-color: var(--basic-background);
-  background-position: top center;
-  background-repeat: no-repeat;
-}
-
-
-h2 {
-  Font family: Cuprum;
-  Font style: Regular;
-  Font size: 30px;
-  Line height: 30px;
-}
-
-.first-section {
   background-color: var(--basic-background);
 }
 
@@ -65,13 +52,7 @@ img {
 }
 
 .navigation {
-  font-family: Cuprum;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
   text-decoration: none;
-  list-style: none;
 }
 
 .color-nav {
@@ -86,18 +67,12 @@ img {
 
 /* header */
 .search {
-  Font family: Cuprum;
   Font style: Regular;
-  Font size: 18px;
-  Line height: 24px;
   background-color: var(--focus-nav);
 }
 
 .list-orders {
-  Font family: Cuprum;
   Font style: Regular;
-  Font size: 18px;
-  Line height: 24px;
   color: var(--basic-white);
   background-color: var(--focus-nav);
   list-style: none;
@@ -108,7 +83,6 @@ img {
 }
 
 .title {
-  font-family: Cuprum;
   font-style: italic;
   font-weight: normal;
   font-size: 16px;
@@ -117,8 +91,6 @@ img {
 }
 
 .telephone {
-  font-family: Cuprum;
-  font-style: normal;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
@@ -127,8 +99,6 @@ img {
 }
 
 .address {
-  font-family: Cuprum;
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
@@ -137,7 +107,6 @@ img {
 }
 
 .user-navigation {
-  font-family: Cuprum;
   font-style: normal;
   font-weight: normal;
   font-size: 21px;
@@ -151,17 +120,15 @@ img {
 }
 
 /*main*/
-
-
-.catalog-item h2{
+.catalog-item h2 {
   font-family: Cuprum;
-font-style: normal;
-font-weight: bold;
-font-size: 24px;
-line-height: 30px;
-color: var(--basic-white)
-
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  color: var(--basic-white)
 }
+
 .material {
   background-color: var(--special-ylellow);
 }
@@ -181,15 +148,13 @@ color: var(--basic-white)
 .deliver {
   background-color: var(--ylellow);
 }
-.catalog-slide{
+
+.catalog-slide {
   background-image: url("../img/true-man.jpg");
-   background-repeat: no-repeat;
+  background-repeat: no-repeat;
 }
 
 .popular-staff {
-  font-family: Cuprum;
-  font-style: normal;
-  font-weight: normal;
   font-size: 30px;
   line-height: 30px;
   color: var(--basic-black);
@@ -229,8 +194,8 @@ color: var(--basic-white)
   list-style: none;
 }
 
-.popular-firms-section,
-.popular-product-section {
+.popular-firms,
+.popular-product {
   background-color: var(--basic-white);
 }
 
@@ -244,8 +209,6 @@ color: var(--basic-white)
 }
 
 .button-toogle {
-  font-family: Cuprum;
-  font-style: normal;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
@@ -253,10 +216,7 @@ color: var(--basic-white)
   background-color: var(--address);
 }
 
-.deliv {
-  font-family: Cuprum;
-  font-style: normal;
-  font-weight: normal;
+.service-title {
   font-size: 30px;
   line-height: 30px;
   color: var(--address);
@@ -285,11 +245,6 @@ color: var(--basic-white)
 }
 
 .address-footer {
-  font-family: Cuprum;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
   color: var(--basic-background);
 }
 
@@ -300,27 +255,26 @@ color: var(--basic-white)
 
 .copiright,
 .feedback, {
-  font-family: Cuprum;
-  font-style: normal;
-  font-weight: normal;
   font-size: 16px;
   line-height: 18px;
 }
+
 .copiright,
-.lead{
-    color: var(--basic-white);
+.lead {
+  color: var(--basic-white);
 }
-.adress-mail{
+
+.adress-mail {
   color: var(--gold);
 }
 
 /*modal*/
-.modal{
+.modal {
   color: var(--basic-black);
- background-color: var(--basic-white);
- background-position: 0 0;
- background-repeat: repeat;
- box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+  background-color: var(--basic-white);
+  background-position: 0 0;
+  background-repeat: repeat;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
 /*buttons sittings*/
@@ -329,14 +283,14 @@ color: var(--basic-white)
 .button:active {
   background-color: var(--focus-button);
 }
+
 .nav-button:hover,
 .nav-button:focus,
-.nav-button:active{
-    background-color: var(--focus-nav);
+.nav-button:active {
+  background-color: var(--focus-nav);
 }
 
 .button {
-  Font family: Cuprum;
   Font style: Regular;
   Font size: 14px;
   Line height: 18px;
@@ -344,10 +298,7 @@ color: var(--basic-white)
   background-color: var(--basic-red);
 }
 
-.catalog-button{
-  font-family: Cuprum;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 18px;
+.catalog-button {
+  font-size: 14px;
+  line-height: 18px;
 }
