--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,6 @@ body {
 
 a {
   text-decoration: none;
-
-
 }
 
 img {
@@ -52,14 +50,13 @@ img {
   background-color: var(--basic-grey);
   list-style: none;
   color: var(--basic-white);
-
 }
 
 .navigation {
   text-decoration: none;
   list-style: none;
-
 }
+
 .color-staff,
 .color-nav {
   color: var(--basic-white);
@@ -69,6 +66,11 @@ img {
 .catalog-list a,
 .list-orders a {
   color: var(--basic-white);
+}
+
+.title {
+  font-size: 30px;
+  line-height: 30px;
 }
 
 /* header */
@@ -88,7 +90,7 @@ img {
   background-color: var(--basic-green);
 }
 
-.title {
+.title-header {
   font-style: italic;
   font-weight: normal;
   font-size: 16px;
@@ -133,11 +135,10 @@ img {
   font-size: 24px;
   line-height: 30px;
   color: var(--basic-white)
-
 }
-.catalog-list{
-  list-style: none;
 
+.catalog-list {
+  list-style: none;
 }
 
 .material {
@@ -171,13 +172,14 @@ img {
   color: var(--basic-black);
   background-color: var(--special-gray);
 }
+
 .title-popular {
   font-family: Cuprum;
-font-style: normal;
-font-weight: bold;
-font-size: 36px;
-line-height: 36px;
-color: var(--basic-white);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 36px;
+  color: var(--basic-white);
 }
 
 .drill-title {
@@ -320,4 +322,105 @@ color: var(--basic-white);
 .catalog-button {
   font-size: 14px;
   line-height: 18px;
+}
+
+.filter-button {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  list-style: none;
+}
+
+.filter-button a {
+  color: var(--old-price);
+}
+
+.pagination-active {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  color: var(--basic-white);
+  background-color: var(--basic-red);
+}
+
+.pagination-none {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  color: var(--basic-black)
+}
+
+.filter-button:hover a,
+.filter-button:focus a,
+.filter-button:active a {
+  color: var(--basic-red);
+}
+
+.filter-show {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  background-color: var(--basic-white);
+  border: 1px solid #E5E5E5;
+}
+
+/*Catalog main*/
+.main-catalog {
+  background-color: var(--basic-white);
+}
+
+.form {
+  border: 0 none;
+  text-align: left;
+}
+
+.catalog-title {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  list-style: none;
+}
+
+.catalog-title a {
+  color: var(--basic-black);
+}
+
+.basic-background {
+  background-color: var(--basic-background);
+}
+
+.sorting {
+  background-color: var(--special-gray);
+}
+
+.filter-title {
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  list-style: none;
+}
+
+.filter-heading {
+  font-family: PT Sans;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.filter-price {
+  font-family: PT Sans;
+  font-size: 17px;
+  line-height: 18px;
+  background-color: var(--basic-background);
+}
+
+.filter-item {
+  font-family: PT Sans;
+  font-size: 15px;
+  line-height: 19px;
+}
+
+.pagination {
+  list-style: none;
 }
