--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@
 }
 
 /* Global */
-body {
-  min-width: 1200px;
+.page-body {
+
   margin: 0;
   padding: 0;
   font-family: "Cuprum";
@@ -34,7 +34,8 @@ body {
   font-weight: normal;
   line-height: 24px;
   color: var(--basic-black);
-  background-color: var(--basic-background);
+  background-color: var(--basic-white);
+  min-height: 100%;
 }
 
 a {
@@ -74,24 +75,32 @@ img {
   text-transform: uppercase;
 }
 
+.background{
+  background-color: var(--basic-background)
+}
+
 /* header */
-.search {
-  font-style: normal;
+
+.main-logo{
+  padding-left: 130px;
+
+}
+.background-nav {
   background-color: var(--focus-nav);
+
 }
 
 .list-orders {
-  font-style: normal;
   color: var(--basic-white);
-  background-color: var(--focus-nav);
   list-style: none;
-}
 
+}
 .ordering {
   background-color: var(--basic-green);
-}
 
+}
 .title-header {
+  padding-left: 160px;
   font-style: italic;
   font-weight: normal;
   font-size: 16px;
@@ -99,12 +108,14 @@ img {
   color: var(--basic-red);
 }
 
+
 .telephone {
+  padding-top: 88px;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
   color: var(--basic-red);
-  text-align: center;
+  padding-left: 460px;
 }
 
 .address {
@@ -112,7 +123,7 @@ img {
   font-size: 14px;
   line-height: 24px;
   color: var(--address);
-  text-align: center;
+    text-align: center;
 }
 
 .user-navigation {
@@ -128,7 +139,28 @@ img {
   color: var(--basic-black);
 }
 
+.whaper-nav-down{
+  margin: 0 130px;
+}
+
 /*main*/
+.container{
+  margin: 0 130px;
+}
+
+.catalog-list{
+  width: 940px;
+  height: 409px;
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 123px 123px 123px;
+  grid-gap: 20px;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 .catalog-item h2 {
   font-family: "Cuprum";
   font-style: normal;
@@ -138,9 +170,6 @@ img {
   color: var(--basic-white)
 }
 
-.catalog-list {
-  list-style: none;
-}
 
 .material {
   background-color: var(--special-ylellow);
@@ -155,14 +184,21 @@ img {
 }
 
 .sales {
+  grid-column: 3/4;
+  grid-row: 2/3;
+
   background-color: var(--green);
 }
 
 .deliver {
+  grid-column: 3/4;
+  grid-row: 3/4;
   background-color: var(--ylellow);
 }
 
 .catalog-slide {
+  grid-column: 1/3;
+  grid-row: 2/4;
   background-image: url("../img/true-man.jpg");
   background-repeat: no-repeat;
 }
@@ -201,6 +237,14 @@ img {
   color: var(--old-price);
 }
 
+
+.drill-list{
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-gap: 20px;
+}
+
 .buy-button {
   font-family: "PT Sans";
   font-style: normal;
@@ -211,9 +255,12 @@ img {
   background-color: var(--basic-red);
 }
 
-.firms-list,
-.drill-list {
+.firms-list{
   list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-row: repeat(2,1fr);
+  grid-gap: 20px;
 }
 
 .popular-firms,
@@ -421,7 +468,6 @@ img {
 }
 
 .filter-item {
-  font-family: "PT Sans";
   font-size: 15px;
   line-height: 19px;
   text-transform: uppercase;
@@ -429,4 +475,16 @@ img {
 
 .pagination {
   list-style: none;
+}
+
+/*Grid*/
+.page {
+  height: 100%;
+}
+
+.hight-footer{
+ display: grid;
+ margin: 0;
+ padding: 0;
+ grid-template-columns: 1fr 1fr 1fr;
 }
