--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,6 @@
 
 /* Global */
 .page-body {
-
-  margin: 0;
-  padding: 0;
   font-family: "Cuprum";
   font-size: 18px;
   font-style: normal;
@@ -75,32 +72,31 @@ img {
   text-transform: uppercase;
 }
 
-.background{
-  background-color: var(--basic-background)
+.basic-background {
+  background-color: var(--basic-background);
+}
+
+.wrapper {
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* header */
-
-.main-logo{
-  padding-left: 130px;
-
-}
 .background-nav {
   background-color: var(--focus-nav);
-
 }
 
 .list-orders {
   color: var(--basic-white);
   list-style: none;
-
 }
+
 .ordering {
   background-color: var(--basic-green);
-
 }
+
 .title-header {
-  padding-left: 160px;
   font-style: italic;
   font-weight: normal;
   font-size: 16px;
@@ -108,14 +104,11 @@ img {
   color: var(--basic-red);
 }
 
-
 .telephone {
-  padding-top: 88px;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
   color: var(--basic-red);
-  padding-left: 460px;
 }
 
 .address {
@@ -123,7 +116,7 @@ img {
   font-size: 14px;
   line-height: 24px;
   color: var(--address);
-    text-align: center;
+  text-align: center;
 }
 
 .user-navigation {
@@ -132,34 +125,23 @@ img {
   font-size: 21px;
   line-height: 21px;
   background-color: var(--basic-white);
-  text-align: right;
 }
 
 .user-navigation a {
   color: var(--basic-black);
 }
 
-.whaper-nav-down{
-  margin: 0 130px;
-}
-
 /*main*/
-.container{
-  margin: 0 130px;
-}
-
-.catalog-list{
-  width: 940px;
-  height: 409px;
+.catalog-list {
   display: grid;
   grid-template-columns: 300px 300px 300px;
   grid-template-rows: 123px 123px 123px;
   grid-gap: 20px;
   list-style: none;
-  margin-left: auto;
-  margin-right: auto;
-}
+  margin: 0;
+  padding: 0;
 
+}
 
 .catalog-item h2 {
   font-family: "Cuprum";
@@ -169,7 +151,6 @@ img {
   line-height: 30px;
   color: var(--basic-white)
 }
-
 
 .material {
   background-color: var(--special-ylellow);
@@ -186,7 +167,6 @@ img {
 .sales {
   grid-column: 3/4;
   grid-row: 2/3;
-
   background-color: var(--green);
 }
 
@@ -225,7 +205,7 @@ img {
   font-weight: bold;
   font-size: 18px;
   line-height: 20px;
-  color: var(--basic-black)
+  color: var(--basic-black);
 }
 
 .old-price {
@@ -237,12 +217,13 @@ img {
   color: var(--old-price);
 }
 
-
-.drill-list{
+.drill-list {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .buy-button {
@@ -255,12 +236,14 @@ img {
   background-color: var(--basic-red);
 }
 
-.firms-list{
+.firms-list {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-row: repeat(2,1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-row: repeat(2, 1fr);
   grid-gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .popular-firms,
@@ -293,7 +276,6 @@ img {
 }
 
 .section-about {
-  background-color: var(--basic-white);
 }
 
 /*Footer*/
@@ -478,13 +460,3 @@ img {
 }
 
 /*Grid*/
-.page {
-  height: 100%;
-}
-
-.hight-footer{
- display: grid;
- margin: 0;
- padding: 0;
- grid-template-columns: 1fr 1fr 1fr;
-}
