--- a/css/style.css
+++ b/css/style.css
@@ -459,4 +459,15 @@ img {
   list-style: none;
 }
 
+.drill-list-catalog{
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(3,1fr);
+  grid-gap: 20px;
+  padding: 0;
+  margin: 0;
+
+}
+
 /*Grid*/
