--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,15 @@ img {
 }
 
 .navigation {
+  height: 60px;
   text-decoration: none;
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0;
+  margin-bottom: 60px
 }
 
 .color-staff,
@@ -76,23 +83,59 @@ img {
   background-color: var(--basic-background);
 }
 
+.background-footer {
+  background-color: var(--adress);
+}
+
 .wrapper {
   width: 940px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.container-element {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.container-element-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
 /* header */
 .background-nav {
+  background-color: var(--address);
+}
+.background-footer-second{
   background-color: var(--focus-nav);
+
+
 }
 
 .list-orders {
   color: var(--basic-white);
   list-style: none;
+  width: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.list-orders a {
+  display: block;
+}
+
+.search {
+  width: 271px;
 }
 
 .ordering {
+  display: block;
+  padding: 9px 16px 9px 19px;
   background-color: var(--basic-green);
 }
 
@@ -102,6 +145,7 @@ img {
   font-size: 16px;
   line-height: 23px;
   color: var(--basic-red);
+  padding-left: 7px;
 }
 
 .telephone {
@@ -109,6 +153,8 @@ img {
   font-size: 21px;
   line-height: 30px;
   color: var(--basic-red);
+  padding-left: 74px;
+  padding-right: 45px;
 }
 
 .address {
@@ -116,19 +162,43 @@ img {
   font-size: 14px;
   line-height: 24px;
   color: var(--address);
-  text-align: center;
+}
+
+.address-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .user-navigation {
+  width: 271px;
   font-style: normal;
   font-weight: normal;
   font-size: 21px;
   line-height: 21px;
   background-color: var(--basic-white);
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .user-navigation a {
   color: var(--basic-black);
+}
+
+.nav-up {
+  height: 42px;
+  display: flex;
+  flex-grow: 1;
+}
+
+.nav-down {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 45px;
 }
 
 /*main*/
@@ -140,7 +210,7 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
-
+  padding-bottom: 59px;
 }
 
 .catalog-item h2 {
@@ -149,7 +219,8 @@ img {
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
-  color: var(--basic-white)
+  color: var(--basic-white);
+  padding-left: 23px;
 }
 
 .material {
@@ -180,23 +251,47 @@ img {
   grid-column: 1/3;
   grid-row: 2/4;
   background-image: url("../img/true-man.jpg");
-  background-repeat: no-repeat;
+  backgrou
 }
+.slide-elements{
+  display: flex;
+  flex-direction: column;
+  padding-left: 23px;
+  height: 266px;
+  justify-content: space-between;
+}
+
+.slider-buttons{
+
+}
+ .slider-catalog-button{
+    margin-bottom: 27px;
+ }
+
 
 .popular-staff {
   font-size: 30px;
   line-height: 30px;
   color: var(--basic-black);
   background-color: var(--special-gray);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 28px;
+  padding-right: 38px;
+  margin-bottom: 20px;
 }
 
 .title-popular {
   font-family: "Cuprum";
-  font-style: normal;
-  font-weight: bold;
+  margin-bottom: 4px;
+  background: 0 0;
   font-size: 36px;
-  line-height: 36px;
+  line-height: 30px;
+  font-weight: 700;
   color: var(--basic-white);
+
 }
 
 .drill-title {
@@ -206,7 +301,11 @@ img {
   font-size: 18px;
   line-height: 20px;
   color: var(--basic-black);
+  text-align: center;
 }
+ .drill-size{
+   min-height: 180px;
+ }
 
 .old-price {
   font-family: "PT Sans";
@@ -215,6 +314,7 @@ img {
   font-size: 17px;
   line-height: 18px;
   color: var(--old-price);
+  padding-bottom: 13px;
 }
 
 .drill-list {
@@ -224,7 +324,11 @@ img {
   grid-gap: 20px;
   margin: 0;
   padding: 0;
+  margin-bottom: 70px;
+  height: 318px;
 }
+
+
 
 .buy-button {
   font-family: "PT Sans";
@@ -244,6 +348,7 @@ img {
   grid-gap: 20px;
   margin: 0;
   padding: 0;
+  margin-bottom: 70px;
 }
 
 .popular-firms,
@@ -275,23 +380,43 @@ img {
   text-transform: uppercase;
 }
 
-.section-about {
+.drill-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.section-about{
+  padding-top: 64px;
+  padding-bottom: 99px;
+}
+
+.section-about-too {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 70px;
 }
 
 /*Footer*/
-.section-footer-first {
+
+.background-footer{
   background-color: var(--address);
+  height: 193;
 }
+
 
 .section-footer-second {
   background-color: var(--focus-nav);
+  height: 107px;
 }
 
 .color-nav-footer a {
   color: var(--basic-background);
 }
 
-.color-nav-footer-second a {
+.color-nav-footer-second a{
   color: var(--gold);
 }
 
@@ -304,10 +429,16 @@ img {
   text-align: center;
 }
 
-.copiright,
-.feedback, {
+.copiright a,
+.feedback a, {
   font-size: 16px;
   line-height: 18px;
+}
+
+.feedback {
+display: block;
+padding-bottom: px;
+
 }
 
 .copiright,
@@ -317,6 +448,44 @@ img {
 
 .adress-mail {
   color: var(--gold);
+}
+
+.section-footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.section-footer-container-second{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 107px;
+}
+
+
+.navigation-footer-first {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.navigation-footer-second{
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+
+.container-element-footer{
+  display: flex;
+  flex-direction: column;
+  width: 546px;
+  padding-top: 20px;
 }
 
 /*modal*/
@@ -335,24 +504,31 @@ img {
   background-color: var(--focus-button);
 }
 
-.nav-button:hover,
-.nav-button:focus,
-.nav-button:active {
-  background-color: var(--focus-nav);
-}
+
+
 
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-style: normal;
   font-size: 14px;
   line-height: 18px;
   color: var(--basic-white);
   background-color: var(--basic-red);
   text-transform: uppercase;
+  width: 192px;
+  height: 38px;
+}
+.nav-button{
+  display: block;
+  padding: 16px 24px 20px 27px;
 }
 
 .catalog-button {
   font-size: 14px;
   line-height: 18px;
+  padding-left: 46px;
 }
 
 .filter-button {
@@ -395,6 +571,53 @@ img {
   background-color: var(--basic-white);
   border: 1px solid #E5E5E5;
 }
+
+.button-toogle {
+  display: block;
+  width: 240px;
+  height: 61px;
+  padding-left: 22px;
+  padding-top: 13.5px;
+}
+
+.button-list {
+  padding: 0;
+  margin: 0;
+}
+
+.login {
+  display: block;
+  padding: 12px 27px 12px 45px;
+  background-color: var(--basic-white);
+  margin-right: 10px;
+}
+
+.register {
+  display: block;
+  padding: 12px 24px;
+  background-color: var(--basic-white);}
+
+.slide-button-back{
+
+
+}
+
+
+.slide-button-next{
+
+
+}
+
+
+.nav-button:hover,
+.nav-button:focus{
+  background-color: var(--focus-nav);
+}
+
+.feedback{
+    list-style: none;
+}
+
 
 /*Catalog main*/
 .main-catalog {
@@ -459,15 +682,12 @@ img {
   list-style: none;
 }
 
-.drill-list-catalog{
+.drill-list-catalog {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-gap: 20px;
   padding: 0;
   margin: 0;
-
 }
-
-/*Grid*/
